Fixes sidebar whitespace issue by defining margin of 0 for first element of each page.

--- a/front-end/src/MeetTheTeam.css
+++ b/front-end/src/MeetTheTeam.css
@@ -1,3 +1,8 @@
+h1 {
+    margin-top: 0;
+    padding: 0;
+}
+
 .content {
     width: 700px;
     padding: 50px;
